--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     font-family: 'Open Sans', sans-serif;
 }
 body{
+    width: 100%;
+    max-width:1170px;
+    margin:0 auto;
     background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 /*<!--Start Header-->*/
@@ -177,7 +180,7 @@ ul.left_menu li a {
         max-width:60px;
     }
     .header_links a.button_dark{
-        margin-right:0;
+        margin-right:20px;
     }
 }
     /*<!--Start Hero Section-->*/
