Update burger menu

--- a/style.css
+++ b/style.css
@@ -146,9 +146,8 @@ header{
 
 ul.left_menu li a {
     text-decoration: none;
-    font-size: 14px;
-    color: #B5B5B5;
-
+    font-size: 22px;
+    color: #8476AA;
     font-weight: 600;
     margin: 20px 0;
     font-family:Raleway,sans-serif;
